Set package to private

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "Sizzle",
+  "name": "sizzle",
   "version": "1.0.0",
   "description": "A theme for Open Restaurant",
+  "private" : true,
   "scripts": {
     "postinstall": "find node_modules/ -name '*.info' -type f -delete"
   },
