--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "drupal",
     "theme"
   ],
-  "author": "Arshad Chummun <arshad@chummun.com> (http://arshad.github.io/)",
+  "author": "Arshad Chummun <arshad@chummun.com> (http://arshad.io)",
   "dependencies": {
     "gulp-rename": "~1.2.2",
     "gulp-compass": "~2.1.0",
